fixing some spacing issues

--- a/scss/blog-body.scss
+++ b/scss/blog-body.scss
@@ -68,4 +68,10 @@
       font-size: 14px;
     }
   }
+
+  &.showcase {
+    .blog-content {
+      padding-top: 0;
+    }
+  }
 }
